<resources>
    <string name="app_name">ISS Tracker</string>
    <string name="title">ISS TRACKER</string>
    <string name="update_iss_location">Update ISS Location</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="time">Time:</string>
    <string name="update">UPDATE</string>
    <string name="background">ISS background</string>
    <string name="image_of_crew">Image of crew</string>
    <string name="mission_patch">Mission patch</string>
    <string name="mission_patch_image">Mission Patch</string>
    <string name="expedition">"Expedition "</string>
    <string name="start_date">"Start Date: "</string>
    <string name="end_date">"End Date: "</string>
    <string name="crew_group_picture">Crew Group Picture</string>
    <string name="launched">"Launched: "</string>
    <string name="unable_to_get_location">Unable to get location</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="latitude_longitude">Latitude: %1$s\nLongitude: %2$s</string>
    <string name="visibility">ISS will be visible in your sky in\n%1$s\n%2$s</string>
    <string name="direction">Starting azimuth: %1$s %2$s\nStarting elevation: %3$s\nEnding azimuth: %4$s %5$s\nEnding elevation: %6$s\nDuration: %7$d seconds</string>
    <string name="view_crew">VIEW CREW</string>
</resources>