<?xml version="1.0" encoding="utf-8"?><!--LinearLayout Vertical-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_centerInParent="true"
        android:alpha=".55"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/background"
        android:src="@drawable/iss" />

    <!-- TITLE -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/nasalization"
        android:text="@string/title"
        android:textColor="@color/navy"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- LATITUDE -->
    <RelativeLayout
        android:id="@+id/latitudeRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_display_bold"
            android:paddingStart="0dp"
            android:paddingEnd="5dp"
            android:text="@string/latitude"
            android:textColor="@color/navy"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/latitude"
            android:layout_toEndOf="@+id/latitude"
            android:fontFamily="@font/source_sans_pro_bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <!-- LONGITUDE -->
    <RelativeLayout
        android:id="@+id/longitudeRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/latitudeRow"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_display_bold"
            android:paddingStart="0dp"
            android:paddingEnd="5dp"
            android:text="@string/longitude"
            android:textColor="@color/navy"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/longitude"
            android:layout_toEndOf="@+id/longitude"
            android:fontFamily="@font/source_sans_pro_bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <!-- TIME -->
    <RelativeLayout
        android:id="@+id/timeRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/longitudeRow"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_display_bold"
            android:paddingStart="0dp"
            android:paddingEnd="5dp"
            android:text="@string/time"
            android:textColor="@color/navy"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/time"
            android:layout_toEndOf="@+id/time"
            android:fontFamily="@font/source_sans_pro_bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btnRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeRow"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:id="@+id/btnLocation"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@drawable/sqbutton_9"
            android:contentDescription="@string/update_iss_location"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/btnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/source_sans_pro_bold"
            android:text="@string/update_iss_location"
            android:textColor="@color/white"
            />

    </RelativeLayout>

    <!--progress bar for loading -->
    <ProgressBar
        android:id="@+id/idLoadingPB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRow"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnRow"
        />

    <FrameLayout
        android:layout_alignBottom="@+id/map_fragment"
        android:layout_alignStart="@+id/map_fragment"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <ImageButton
            android:id="@+id/imageCrew"
            android:contentDescription="@string/image_of_crew"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="70dp"
            android:layout_gravity="center_horizontal"
            android:clickable="false"
            android:text="@string/view_crew"
            />

    </FrameLayout>



    <TextView
        android:id="@+id/nextPassText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/map_fragment"
        android:layout_centerInParent="true"
        android:layout_marginBottom="240dp"
        android:fontFamily="@font/source_sans_pro_bold"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textAlignment="center"
        android:textColor="@color/navy" />

    <TextView
        android:id="@+id/directionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/map_fragment"
        android:layout_centerInParent="true"
        android:layout_marginBottom="130dp"
        android:fontFamily="@font/source_sans_pro_bold"
        android:textSize="15sp"
        android:textStyle="bold"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textAlignment="textStart"
        android:textColor="@color/navy" />


</RelativeLayout>